k3s/argocd/projects/personal/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  selector:
    app: dashy
  ports:
  - port: 8080
    targetPort: 8080
